--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "programming-work": "server=localhost;port=3306;database=programming-work"
+    "programming-work-db": "server=localhost;port=3306;database=programming-work;user=root;password=;"
   }
 }
