--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "programming-work-db": "server=localhost;port=3306;database=programming-work;user=root;password=;"
+  },
+    "Jwt": {
+      "Key": "carolina123.@",
+      "Issuer": "http://localhost:8000/",
+      "Audience": "http://localhost:8000/",
+      "Subject": "baseWebApiSubject"
+    }
   }
-}
+  
